# CGRA_Engine

./: AI_USE.MD  CMakeLists.txt  sources.MD
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
scratchpad/: datatypesandstructure.c  notes.MD  somefunctions.c
src/: main.c
src/input/: input.c  input.h
src/render/: render.c  render.h  shader.c  shader.h  window.c  window.h
src/render/shaders/: demo.fs  demo.vs  frag.glsl  vert.glsl
src/window/: window.c  window.h
src_new/: main.c
src_new/util/: sparse_set.h
